<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details.DetailsFragment"
    >


    <FrameLayout
        android:id="@+id/avatarFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_20sdp"
            android:layout_gravity="center"

          />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <TextView
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_star"
            app:drawableTint="@android:color/darker_gray"
            tools:text="123"
            android:layout_marginEnd="@dimen/_10sdp"
             />

        <TextView
            android:id="@+id/forks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_fork"
            app:drawableTint="@android:color/darker_gray"
            tools:text="12"
            android:layout_marginEnd="@dimen/_10sdp"
             />

        <TextView
            android:id="@+id/watchers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_watchers"
            app:drawableTint="@android:color/darker_gray"
            tools:text="12"
           />

    </LinearLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarFrame"
        tools:text="kotlin-trending-repos-and-more"
       />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="@string/app_name"
        android:textAlignment="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_circle"
        tools:text="@string/app_name"
        android:layout_marginTop="@dimen/_10sdp"
        app:drawableTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language"
        app:layout_constraintEnd_toEndOf="@id/name"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:text="@string/created_on"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/createDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/create"
        tools:text="12 Dec 2020"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/createDate"
        android:text="@string/last_update"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/updateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/update"
        tools:text="12 Dec 2020"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/updateDate"
        android:text="@string/opened_issues"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/issuesOpened"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/issues"
        tools:text="100"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"/>

    <Button
        android:id="@+id/btnBrowse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_browser"
        android:layout_margin="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issuesOpened"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>